# sillycli

./: Cargo.toml
src/: main.rs  printer.rs
