[package]
name = "sillycli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sillypaste_cli_api = {path = "../sillypaste_cli_api"}
syntect = "5.0"
serde = { version = "1.0", features = ["derive"]}
clap = { version = "4.0.18", features = ["derive"]}
tokio = {version = "1", features = ["full"]}

